--- a/user-service-zk/src/main/resources/WEB-INF/zk-label.properties
+++ b/user-service-zk/src/main/resources/WEB-INF/zk-label.properties
@@ -1,9 +1,10 @@
-# LoginController
+# login.zul
 login_title=Login
 login_username=User name
 login_password=Password
 login_login=Login
 
+# LoginController
 login.failed_login=Failed to log in.
 
 # UserController
