Split the test service into separate EventAdmin and RxJava components.

--- a/test-war/src/main/webapp/WEB-INF/zk-label.properties
+++ b/test-war/src/main/webapp/WEB-INF/zk-label.properties
@@ -1,5 +1,6 @@
 # index.zul
-index_label = Label:
+index_test_label = Test:
+index_rxtest_label = RxTest:
 
 # Global localizations, accessible by all ZK macros
 _cancel = Cancel
