--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <inceptionYear>2019</inceptionYear>
 
   <modules>
+    <module>service</module>
     <module>service-api</module>
     <module>test-service</module>
     <module>test-service-api</module>
