Added integration test for UserService.

--- a/test-war/pom.xml
+++ b/test-war/pom.xml
@@ -30,6 +30,7 @@
             <Import-Package>
               au.id.raboczi.cornerstone.test_service.zk,
               au.id.raboczi.cornerstone.user_service.zk,
+              !org.checkerframework.checker.*,
               org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
               org.zkoss.zk.ui.http,
