--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,17 @@
     <zk.version.range>[9.0,10)</zk.version.range>
   </properties>
 
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <url>http://localhost:8081/repository/maven-releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <url>http://localhost:8081/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <licenses>
     <license>
       <name>GNU Lesser General Public License, Version 3.0</name>
