--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -40,6 +40,7 @@
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
           <systemPropertyVariables>
+            <project.version>${project.version}</project.version>
             <pax.exam.karaf.version>${karaf.version}</pax.exam.karaf.version>
           </systemPropertyVariables>
         </configuration>
