--- a/service/test-service-api/pom.xml
+++ b/service/test-service-api/pom.xml
@@ -4,13 +4,13 @@
 
   <parent>
     <groupId>au.id.raboczi.cornerstone</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>parent-service</artifactId>
     <version>0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>test-service</artifactId>
-  <name>Cornerstone :: Test service</name>
+  <artifactId>test-service-api</artifactId>
+  <name>Cornerstone :: Test service API</name>
   <packaging>bundle</packaging>
 
   <build>
@@ -18,6 +18,13 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
+        <configuration>
+          <instructions>
+            <Export-Package>
+              au.id.raboczi.cornerstone.test_service
+            </Export-Package>
+          </instructions>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -41,46 +48,18 @@
           </execution>
         </executions>
       </plugin>
-      <!--
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-artifacts</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>target/feature/feature.xml</file>
-                  <classifier>features</classifier>
-                  <type>xml</type>
-                </artifact>
-              </artifacts>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      -->
     </plugins>
   </build>
 
   <dependencies>
     <dependency>
-      <groupId>au.id.raboczi.cornerstone</groupId>
-      <artifactId>test-service-api</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava3</groupId>
       <artifactId>rxjava</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.annotation</artifactId>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
