--- a/test-war/pom.xml
+++ b/test-war/pom.xml
@@ -21,6 +21,7 @@
         <targetPath>${project.build.directory}/feature</targetPath>
       </resource>
     </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
@@ -41,6 +42,22 @@
           </instructions>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.karaf.tooling</groupId>
+        <artifactId>karaf-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>features-generate-descriptor</goal>
+            </goals>
+            <configuration>
+              <includeProjectArtifact>true</includeProjectArtifact>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
@@ -51,6 +68,7 @@
           </archive>
         </configuration>
       </plugin>
+<!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -73,6 +91,7 @@
           </execution>
         </executions>
       </plugin>
+-->
     </plugins>
   </build>
 
@@ -82,27 +101,31 @@
       <artifactId>test-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>au.id.raboczi.cornerstone</groupId>
       <artifactId>zk</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.core</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zk</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zul</artifactId>
     </dependency>
   </dependencies>
-
 </project>
