--- a/zk/user-service-zk/pom.xml
+++ b/zk/user-service-zk/pom.xml
@@ -4,18 +4,26 @@
 
   <parent>
     <groupId>au.id.raboczi.cornerstone</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>parent-zk</artifactId>
     <version>0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>test-service-zk</artifactId>
-  <name>Cornerstone :: Test service ZK UI</name>
+  <artifactId>user-service-zk</artifactId>
+  <name>Cornerstone :: User service ZK UI</name>
   <packaging>bundle</packaging>
 
   <properties>
     <i18n.propfiles>${basedir}/src/main/resources/WEB-INF/zk-label.properties</i18n.propfiles>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>zk</id>
+      <name>ZK Community Edition repository</name>
+      <url>http://mavensync.zkoss.org/maven2</url>
+    </repository>
+  </repositories>
 
   <build>
     <plugins>
@@ -24,7 +32,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Export-Package>au.id.raboczi.cornerstone.test_service.zk</Export-Package>
+            <Export-Package>au.id.raboczi.cornerstone.user_service.zk</Export-Package>
           </instructions>
         </configuration>
       </plugin>
@@ -37,32 +45,45 @@
       <artifactId>service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>test-service-api</artifactId>
+      <artifactId>user-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>zk</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.annotation</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.core</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.zkoss.addons</groupId>
+      <artifactId>rxzk</artifactId>
+      <version>0.8.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zk</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zul</artifactId>
