--- a/zk/zk-support/pom.xml
+++ b/zk/zk-support/pom.xml
@@ -4,12 +4,12 @@
 
   <parent>
     <groupId>au.id.raboczi.cornerstone</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>parent-zk</artifactId>
     <version>0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>zk-event-queue-provider</artifactId>
+  <artifactId>zk-support</artifactId>
   <name>Cornerstone :: ZK support</name>
   <packaging>bundle</packaging>
 
@@ -18,28 +18,30 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <configuration>
-          <instructions>
-            <Export-Package>
-              au.id.raboczi.cornerstone.zk.event.impl
-            </Export-Package>
-            <Fragment-Host>org.ops4j.pax.web.pax-web-extender-war;bundle-version="[7.2,8)"</Fragment-Host>
-          </instructions>
-        </configuration>
       </plugin>
     </plugins>
   </build>
 
   <dependencies>
-<!--
     <dependency>
-      <groupId>org.ops4j.pax.web</groupId>
-      <artifactId>pax-web-extender-war</artifactId>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
     </dependency>
--->
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi.annotation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi.cmpn</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi.core</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.zkoss.zk</groupId>
-      <artifactId>zk</artifactId>
+      <artifactId>zul</artifactId>
     </dependency>
   </dependencies>
 
