--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,6 @@
     <pax-web.version>7.2.14</pax-web.version>  <!-- this should match whatever is bundled with ${karaf.version} -->
     <servlet-api.version>3.1.0</servlet-api.version>  <!-- This version of the Servlet API is specified by OSGi R7 Compendium section 140.1 "HTTP Whiteboard Specification" 1.1 -->
     <surefire.argLine/>
-    <zk.version>9.0.0</zk.version>  <!-- usually the same as zk.version.osgi unless there's qualifier, e.g. 9.0.0-SNAPSHOT -->
-    <zk.version.osgi>9.0.0</zk.version.osgi>  <!-- usually the same as zk.version unless there's a qualifier, e.g. 9.0.0.SNAPSHOT -->
-    <zk.version.range>[9.0,10)</zk.version.range>
   </properties>
 
   <distributionManagement>
@@ -165,7 +162,7 @@
               <link>https://docs.oracle.com/javaee/7/api</link>
               <link>https://osgi.org/javadoc/r6/core</link>
               <link>https://osgi.org/javadoc/r6/cmpn</link>
-              <link>https://www.zkoss.org/javadoc/${zk.version}/zk</link>
+              <link>https://www.zkoss.org/javadoc/9.0.0/zk</link>
             </links>
             <overview>src/javadoc/overview.html</overview>
           </configuration>
@@ -410,18 +407,6 @@
         <artifactId>slf4j-api</artifactId>
         <version>1.7.25</version>
         <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.zkoss.zk</groupId>
-        <artifactId>zk</artifactId>
-        <version>${zk.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.zkoss.zk</groupId>
-        <artifactId>zul</artifactId>
-        <version>${zk.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
