--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -35,6 +35,25 @@
       </plugin>
 
       <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <systemPropertyVariables>
+            <project.version>${project.version}</project.version>
+            <pax.exam.karaf.version>${karaf.version}</pax.exam.karaf.version>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
