Split out the UserService integration tests into their own target.
UserService now generates its own Karaf features.
Domain logic targets inherit enforcer checks from service/pom.xml

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,7 @@
     <module>test-service-api</module>
     <module>user-service</module>
     <module>user-service-api</module>
+    <module>user-service-itest</module>
   </modules>
 
   <build>
