--- a/zk/user-service-zk/pom.xml
+++ b/zk/user-service-zk/pom.xml
@@ -54,7 +54,7 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>zk</artifactId>
+      <artifactId>zk-support</artifactId>
       <version>${project.version}</version>
     </dependency>
 
