Renamed cornerstone-test-war feature to test-war for consistency.

--- a/service/test-service/pom.xml
+++ b/service/test-service/pom.xml
@@ -23,7 +23,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>au.id.raboczi.cornerstone</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>test-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
