Created test-whiteboard, an alternative version of test-war using HTTP Whiteboard instead of WAR-style packaging.

--- a/zk/pom.xml
+++ b/zk/pom.xml
@@ -15,6 +15,7 @@
   <modules>
     <module>test-service-zk</module>
     <module>test-war</module>
+    <module>test-whiteboard</module>
     <module>user-service-zk</module>
     <module>zk</module>
     <module>zk-event-queue-provider</module>
