Changed ZK versioning to match this project rather than ZK's version.
Otherwise the version:set Maven target won't work properly.

--- a/zk/zk/pom.xml
+++ b/zk/zk/pom.xml
@@ -8,9 +8,9 @@
     <version>0.1-SNAPSHOT</version>
   </parent>
 
+  <name>Cornerstone :: ZK ${zk.version}</name>
+  <description>ZK version ${zk.version} libraries</description>
   <artifactId>zk</artifactId>
-  <version>${zk.version}</version>
-  <name>Cornerstone :: ZK</name>
   <packaging>feature</packaging>
 
   <build>
