Static distribution now works.
Alternative packaging for the ZK libraries: zk-embed embeds all libraries in a single bundle, rather than using OSGi fragments.
Tinkered with pom.xmls to try to prevent Checker Framework from being included in bundles (this needs more work).

--- a/zk/pom.xml
+++ b/zk/pom.xml
@@ -18,6 +18,7 @@
     <module>test-whiteboard</module>
     <module>user-service-zk</module>
     <module>zk</module>
+    <module>zk-embed</module>
     <module>zk-event-queue-provider</module>
     <module>zk-support</module>
   </modules>
@@ -43,4 +44,12 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.checkerframework</groupId>
+      <artifactId>checker-qual</artifactId>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
