--- a/service/pom.xml
+++ b/service/pom.xml
@@ -49,10 +49,49 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <!--<groupId>org.codehaus.mojo</groupId>  See https://github.com/mojohaus/aspectj-maven-plugin/pull/45 -->
+        <groupId>com.nickwongdev</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <configuration>
+          <aspectLibraries>
+            <aspectLibrary>
+              <groupId>org.apache.shiro</groupId>
+              <artifactId>shiro-aspectj</artifactId>
+            </aspectLibrary>
+          </aspectLibraries>
+          <complianceLevel>${java.source.version}</complianceLevel>
+          <source>${java.source.version}</source>
+          <target>${java.target.version}</target>
+        </configuration>
+        <executions>
+          <execution>
+            <id>aspectj-compile</id>
+            <goals>
+              <goal>compile</goal>
+              <goal>test-compile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+            <version>${aspectj.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-aspectj</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>checker-qual</artifactId>
