--- a/service/user-service/pom.xml
+++ b/service/user-service/pom.xml
@@ -13,6 +13,14 @@
   <packaging>bundle</packaging>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/feature</directory>
+        <filtering>true</filtering>
+        <targetPath>${project.build.directory}/feature</targetPath>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
@@ -20,15 +28,23 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.karaf.tooling</groupId>
-        <artifactId>karaf-maven-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
         <executions>
           <execution>
+            <id>attach-artifacts</id>
+            <phase>package</phase>
             <goals>
-              <goal>features-generate-descriptor</goal>
+              <goal>attach-artifact</goal>
             </goals>
             <configuration>
-              <includeProjectArtifact>true</includeProjectArtifact>
+              <artifacts>
+                <artifact>
+                  <file>target/feature/feature.xml</file>
+                  <type>xml</type>
+                  <classifier>features</classifier>
+                </artifact>
+              </artifacts>
             </configuration>
           </execution>
         </executions>
