Backed out of integrating Apache Shiro, but left the AspectJ plumbing intact.

--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -70,6 +70,13 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>test-service-api</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>user-service-api</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
