--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Artifact versions -->
-    <aspectj.version>1.9.4</aspectj.version>  <!-- This must be a version compatible with shiro-aspectj -->
+    <aspectj.version>1.9.4</aspectj.version>
     <checkerframework.version>3.1.0</checkerframework.version>
     <karaf.version>4.3.0.RC1</karaf.version>
     <osgi.version>7.0.0</osgi.version>
     <pax-web.version>7.2.14</pax-web.version>  <!-- this should match whatever is bundled with ${karaf.version} -->
     <servlet-api.version>3.1.0</servlet-api.version>  <!-- This version of the Servlet API is specified by OSGi R7 Compendium section 140.1 "HTTP Whiteboard Specification" 1.1 -->
-    <shiro.version>1.5.0</shiro.version>
     <surefire.argLine/>
   </properties>
 
