--- a/service/pom.xml
+++ b/service/pom.xml
@@ -56,12 +56,10 @@
         <artifactId>aspectj-maven-plugin</artifactId>
         <configuration>
           <aspectLibraries>
-<!--
             <aspectLibrary>
               <groupId>${project.groupId}</groupId>
-              <artifactId>cornerstone-aspectj</artifactId>
+              <artifactId>test-aspect</artifactId>
             </aspectLibrary>
--->
           </aspectLibraries>
           <complianceLevel>${java.source.version}</complianceLevel>
           <source>${java.source.version}</source>
@@ -88,6 +86,13 @@
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>test-aspect</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
