--- a/zk/zk-embed/pom.xml
+++ b/zk/zk-embed/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1-SNAPSHOT</version>
   </parent>
 
-  <name>Cornerstone :: ZK ${zk.version} (embedded)</name>
-  <description>ZK version ${zk.version} libraries (embedded)</description>
+  <name>Cornerstone :: ZK framework ${zk.version}</name>
+  <description>ZK is a web application framework (https://www.zkoss.org).  To accommodate its OSGi-incompatible native plugin scheme, all its components are embedded within this bundle.</description>
   <artifactId>zk-embed</artifactId>
   <packaging>bundle</packaging>
 
